plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromActualAnnotationWithParametersInOneLine/common/common.kt
expect annotation class <!LINE_MARKER("descr='Has actuals in [js, jvm] modules'; targets=[(text=js; icon=nodes/Module.svg); (text=jvm; icon=nodes/Module.svg)]")!>Ann<!>(
        val <!LINE_MARKER("descr='Has actuals in [js, jvm] modules'; targets=[(text=x; container=js; icon=nodes/Module.svg); (text=x; container=jvm; icon=nodes/Module.svg); (text=y; container=js; icon=nodes/Module.svg); (text=y; container=jvm; icon=nodes/Module.svg)]")!>x<!>: Int, val y: String,
        val <!LINE_MARKER("descr='Has actuals in [js, jvm] modules'; targets=[(text=b; container=js; icon=nodes/Module.svg); (text=b; container=jvm; icon=nodes/Module.svg); (text=z; container=js; icon=nodes/Module.svg); (text=z; container=jvm; icon=nodes/Module.svg)]")!>z<!>: Double, val b: Boolean
)
